# Quicftp

./: CMakeLists.txt  LICENSE  Makefile  QUIC_LIBRARY.md  README.md  quic_common.h  quic_wrapper.cc  quic_wrapper.h  quicftp_client.cc  quicftp_client.h  quicftp_server.cc  quicftp_server.h  quicftpclient-cli.cc  quicftpserver-cli.cc  stream_manager.cc  stream_manager.h  test_bridge.cc  test_bridge.h
openspec/: project.md
openspec/specs/test-server/: spec.md
test_files/: hello.txt  small.txt
